Fix scrollbar visibilty
The vertical scrollbar was permanently visible even when the content did
not overflow vertically.

--- a/css/styles.css
+++ b/css/styles.css
@@ -71,7 +71,7 @@ body {
 
 main {
     flex-grow: 1;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 .header {
